--- a/examples/site/stylesheets/scss/base.scss
+++ b/examples/site/stylesheets/scss/base.scss
@@ -14,7 +14,7 @@
 @import "_test.scss";
 @import "_toggler.scss";
 @import "_tutorial.scss";
-@import "_zoom_preview.scss";
+@import "_zoom.scss";
 @import "_widget_list.scss";
 @import "_more.scss";
 @import "_swipe_toggle.scss";
