structure template site

--- a/examples/site/stylesheets/scss/_input_clear.scss
+++ b/examples/site/stylesheets/scss/_input_clear.scss
@@ -1,4 +1,4 @@
-#input_clear_page {
+#input-clear_page {
   *[data-ur-set='input-clear'] {
     position: relative;
     input[data-ur-input-clear-component='input'] {
