--- a/examples/site/_layouts/widgets.html
+++ b/examples/site/_layouts/widgets.html
@@ -49,12 +49,84 @@
       </div><!-- menuwrap-->
     </div><!-- menu-->
     <div id="textbody">
-    {{content}}
+      <div data-ur-set="tabs">
+        <div id="adv_btn" data-ur-tabs-component="button" data-ur-tab-id="advancedpage" data-ur-state="disabled">Advanced</div>
+        <div id="basic_btn" data-ur-tabs-component="button" data-ur-tab-id="basicpage" data-ur-state="enabled">Basic</div>
+
+        <div class="wrapper">
+          <h1> {{page.title}} </h1>
+        </div>
+        <div class="description_wrapper">
+          <h2> Description </h2>
+          <div class="description">
+            {{page.description}}
+          </div>
+        </div>
+        <div class="wrapper">
+          <h2>Attributes</h2>
+          <div class="attributes">
+            <div class="basic_tab" data-ur-tabs-component="content" data-ur-tab-id="basicpage" data-ur-state="enabled">
+              <ul>
+                {% for i in page.basic_tab %}
+                  <li><code>{{i[0]}}</code> - {{i[1]}}</li>
+                {% endfor %}
+              </ul>
+            </div><!-- basic -->
+            <div class="advanced_tab" data-ur-tabs-component="content" data-ur-tab-id="advancedpage">
+              <h3> data-ur-set= </h3>
+              <code class="set_name">"{{page.name}}"</code>
+              <br />
+              <h3> data-ur-{{page.name}}-component= </h3>
+              
+              <div class="components">
+                {% for kv in page.advanced_tab %}
+                  <h4>{{kv[0]}}</h4>
+                  <ul>
+                    {% for i in kv[1] %}
+                      <code>"{{i[0]}}"</code>
+                      <ul>
+                      {% for j in i[1] %}
+                        <li>
+                          {% if j.attributes %}
+                            {{j | first | first}}
+                            <ul>
+                              {% for k in j.attributes %}
+                                <li>{{k}}</li>
+                              {% endfor %}
+                            </ul>
+                          {% else %}
+                            {{j}}
+                          {% endif %}
+                        </li>
+                      {% endfor %}
+                      </ul>
+                    {% endfor %}
+                  </ul>
+                {% endfor %}
+              </div>
+              {% if page.instance %}
+                <h3>Instance</h3>
+                <div class="instance">Access the widget via: <code>Ur.Widgets.{{page.name}}["ID"]</code>. The following methods are exposed for each widget:
+                  <ul>
+                    {% for i in page.instance %}
+                      <li><code>{{i[0]}}</code>: {{i[1]}}</li>
+                    {% endfor %}
+                  </ul>
+                </div>
+              {% endif %}
+            </div>
+          </div>
+        </div>
+      </div>
+
+      {{content}}
+
+      
     </div>
     <div id="bottombody">
       <div class="wrapper" id="bottomwrap">
-          <a href="http://site.moovweb.com/"><div id="moovweblogo"></div></a>
-          Uranium &copy; 2012 | <a href="https://github.com/moovweb/uranium">GitHub</a> | <a href="mailto:uranium@moovweb.com">Contact</a>
+        <a href="http://site.moovweb.com/"><div id="moovweblogo"></div></a>
+        Uranium &copy; 2012 | <a href="https://github.com/moovweb/uranium">GitHub</a> | <a href="mailto:uranium@moovweb.com">Contact</a>
       </div><!-- wrapper-->
     </div><!-- bottombody end-->
   </body>
