--- a/examples/site/stylesheets/scss/_tabs.scss
+++ b/examples/site/stylesheets/scss/_tabs.scss
@@ -1,53 +1,63 @@
 // Tabs Page
 
-body#tabs_page {
-  * {
-    &[data-ur-tabs-component='button'] {
-      background-color: silver;
-      border: 1px solid black;
-      border-top-left-radius: 5px 5px;
-      border-top-right-radius: 5px 5px;
-      bottom: -1px;
-      display: inline-block;
-      margin: 0px 5px;
-      padding: 5px;
-      position: relative;
-      &#babutton {
-        padding-top: 6px;
-        padding-bottom: 0px;
-        padding-left: 0px;
-        padding-right: 0px;
-        margin: 0; }
-      &#babutton[data-ur-state="disabled"] {
-        background: #ffd700;
-        color: #323232;
-        opacity: 0.2; }
-      &#babutton[data-ur-state="enabled"] {
-        color: #323232;
-        background: #ffd700; }
-      &#babutton[data-ur-tab-id="advancedpage"] {
-        margin-right: 100px;
-        margin-left: 0px;
-        margin-top: 0px;
-        margin-bottom: 0px; } }
-    &[data-ur-tabs-component='content'] {
-      display: none;
-      background-color: silver; }
-    &[data-ur-tabs-component='button'][data-ur-state='disabled'] {
-      opacity: 0.5; }
-    &[data-ur-tabs-component='button'][data-ur-state='enabled'] {
-      opacity: 1;
-      border-bottom: 1px solid silver; }
-    &[data-ur-tabs-component='content'][data-ur-state='enabled'] {
-      display: block;
-      background-color: silver;
-      border: 1px solid black;
-      padding: 20px; }
-    &[data-ur-set="tabs"][data-ur-tab-id="html"] {
-      text-align: left; } }
+body#tab_page {
+  [data-ur-tabs-component='button'] {
+    background-color: silver;
+    border: 1px solid black;
+    border-top-left-radius: 5px 5px;
+    border-top-right-radius: 5px 5px;
+    bottom: -1px;
+    display: inline-block;
+    margin: 0px 5px;
+    padding: 5px;
+    position: relative;
+  }
+  #babutton {
+    padding-top: 6px;
+    padding-bottom: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+    margin: 0;
+  }
+  #babutton[data-ur-state="disabled"] {
+    background: #ffd700;
+    color: #323232;
+    opacity: 0.2;
+  }
+  #babutton[data-ur-state="enabled"] {
+    color: #323232;
+    background: #ffd700;
+  }
+  #babutton[data-ur-tab-id="advancedpage"] {
+    margin-right: 100px;
+    margin-left: 0px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+  [data-ur-tabs-component='content'] {
+    display: none;
+    background-color: silver;
+  }
+  [data-ur-tabs-component='button'][data-ur-state='disabled'] {
+    opacity: 0.5;
+  }
+  [data-ur-tabs-component='button'][data-ur-state='enabled'] {
+    opacity: 1;
+    border-bottom: 1px solid silver;
+  }
+  [data-ur-tabs-component='content'][data-ur-state='enabled'] {
+    display: block;
+    background-color: silver;
+    border: 1px solid black;
+    padding: 20px;
+  }
+  [data-ur-set="tabs"][data-ur-tab-id="html"] {
+    text-align: left;
+  }
   #tab_widget *[data-ur-set="tabs"] * {
     &[data-ur-tabs-component="button"] {
-      background: #ffd700; }
+      background: #ffd700;
+    }
     &[data-ur-tabs-component="button"][data-ur-state="enabled"] {
       background: #ffd700;
       border-bottom: 1px solid #ffd700; }
