--- a/examples/site/_layouts/geocode-widget-sub.html
+++ b/examples/site/_layouts/geocode-widget-sub.html
@@ -3,8 +3,7 @@
   <head>
     <title>Uranium JS | {{ page.title }}</title>
     <script src="{{site.url}}../../src/uranium-pretty.js"></script>
-    <link rel="stylesheet" type='text/css' href='{{site.url}}../../stylesheets/style_index_yellow.css' />
-    <link rel="stylesheet" type='text/css' href='{{site.url}}../../stylesheets/base.css' />
+    <link rel="stylesheet" type='text/css' href='{{site.url}}../../stylesheets/main.css' />
   </head>
   
   <body id="{{page.name}}_page">
