--- a/examples/site/stylesheets/scss/_test.scss
+++ b/examples/site/stylesheets/scss/_test.scss
@@ -45,6 +45,7 @@ li[data-ur-set="toggler"] {
   border-radius: 5px; }
 
 .attributes {
+  word-wrap: break-word;
   margin-bottom: 15px; }
 
 .attributes h3 {
