--- a/examples/site/_layouts/default.html
+++ b/examples/site/_layouts/default.html
@@ -1,32 +1,25 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html>
   <head>
-    <title>Uranium JS | {{ page.title }}</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <script src="{{site.url}}src/uranium-pretty.js"></script>
-    <link rel="stylesheet" type='text/css' href='{{site.url}}stylesheets/style_index_yellow.css' />
-    <link rel="stylesheet" type='text/css' href='{{site.url}}stylesheets/base.css' />
+    {% include head.html %}
   </head>
   
   <body id="{{page.name}}_page">
-    <a href="http://github.com/moovweb/uranium"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/c641758e06304bc53ae7f633269018169e7e5851/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f77686974655f6666666666662e706e67" alt="Fork me on GitHub"></a>
-    <div id="menu">
-      <div id="menuwrap">
-        <a href="{{site.url}}index.html" class="toplinks {{page.home_selected}}"><div class="menuselect">Main</div></a><!-- menuselect-->
-        <a href="{{site.url}}tutorials.html" class="toplinks {{page.tutorials_selected}}"><div class="menuselect">Tutorial</div></a><!-- menuselect-->
-        <a href="{{site.url}}widget_list.html" class="toplinks {{page.widget_selected}}"><div class="menuselect">Widgets</div></a><!-- menuselect-->
-        <a href="{{site.url}}more.html" class="toplinks {{page.more_selected}}"><div class="menuselect">Philosophy</div></a><!-- menuselect-->
-        <a href="{{site.url}}download.html" class="toplinks {{page.download_selected}}"><div class="menuselect">Download</div></a><!-- menuselect-->
-      </div><!-- menuwrap-->
-    </div><!-- menu-->
-    <div id="textbody">
+    <a id="github_ribbon" href="https://github.com/moovweb/uranium">Fork me<span class="desktop"> on GitHub</span></a>
+    <nav id="menu">
+      {% capture tmp %}
+      <a href="/" {% if page.home_selected %}class="selected"{% endif %}>Main</a>
+      <a href="/tutorials.html" {% if page.tutorials_selected %}class="selected"{% endif %}>Tutorial</a>
+      <a href="/widget_list.html" {% if page.widget_selected %}class="selected"{% endif %}>Widgets</a>
+      <a href="/more.html" {% if page.more_selected %}class="selected"{% endif %}>Philosophy</a>
+      <a href="/download.html" {% if page.download_selected %}class="selected"{% endif %}>Download</a>
+      {% endcapture %}
+      {{ tmp | strip_newlines | remove: "  " }}
+    </nav>
     {{content}}
-    </div>
-    <div id="bottombody">
-      <div class="wrapper" id="bottomwrap">
-          <a href="http://site.moovweb.com/"><div id="moovweblogo"></div></a>
-          Uranium &copy; 2012 | <a href="https://github.com/moovweb/uranium">GitHub</a> | <a href="mailto:uranium@moovweb.com">Contact</a>
-      </div><!-- wrapper-->
-    </div><!-- bottombody end-->
+    <footer id="footer">
+        <a href="http://site.moovweb.com/"><div id="moovweblogo"></div></a>
+        Uranium &copy; 2012 | <a href="https://github.com/moovweb/uranium">GitHub</a> | <a href="mailto:uranium@moovweb.com">Contact</a>
+    </footer>
   </body>
 </html>
