--- a/examples/site/stylesheets/scss/_base.scss
+++ b/examples/site/stylesheets/scss/_base.scss
@@ -229,7 +229,7 @@ hr {
         
         /* Example styles. Non-functioning */
         #extoggler {
-          width: 200px; height: 90px;
+          width: 200px;
           background: rgb(250,250,250) url('resources/largeshade.png') no-repeat left bottom;
           padding: 6px; padding-left: 10px; padding-right: 10px; margin: auto; margin-top: 30px;
           -webkit-border-radius: 5px;
