--- a/examples/site/stylesheets/scss/_download.scss
+++ b/examples/site/stylesheets/scss/_download.scss
@@ -49,4 +49,13 @@ body#download_page {
       }
     }
   }
+  #custom_ur {
+    display: none;
+  }
+  #init {
+    margin: 10px 0;
+  }
+  #result span {
+    display: none;
+  }
 }
