--- a/examples/site/stylesheets/scss/_lib.scss
+++ b/examples/site/stylesheets/scss/_lib.scss
@@ -7,4 +7,6 @@ $color2: #ffd700; // gold
 $color3: #eee; // gray-ish white
 $color4: #9C9FA8; // blue-ish gray
 
+$h1_size: 36px;
+
 $grad1: linear-gradient(white, #e5e5e5);
