--- a/examples/site/_includes/header.html
+++ b/examples/site/_includes/header.html
@@ -1,7 +1,7 @@
 <a id="github_ribbon" href="https://github.com/moovweb/uranium" target="_blank">Fork me<span class="desktop"> on GitHub</span></a>
 <nav id="menu">
   {% capture tmp %}
-  <a href="/" {% if page.home_selected %}class="selected"{% endif %}>Main</a>
+  <a href="/" {% if page.home_selected %}class="selected"{% endif %}><span class="desktop">Main</span></a>
   <a href="/tutorials.html" {% if page.tutorials_selected %}class="selected"{% endif %}>Tutorial</a>
   <a href="/widget_list.html" {% if page.widget_selected %}class="selected"{% endif %}>Widgets</a>
   <a href="/more.html" {% if page.more_selected %}class="selected"{% endif %}>Philosophy</a>
