--- a/examples/site/stylesheets/scss/_widget_list.scss
+++ b/examples/site/stylesheets/scss/_widget_list.scss
@@ -1,4 +1,10 @@
 #widget_list_page {
   #widget_detail {
     li {
-      padding-bottom: 5px; } } }
+      margin-bottom: 5px;
+    }
+    a {
+      color: $color3;
+    }
+  }
+}
