--- a/migration/css/test.css
+++ b/migration/css/test.css
@@ -136,3 +136,45 @@
   }
 
   /* Carousel */
+  [data-ur-carousel-component='view_container'] {
+    background: #ffd700 url("resources/largeshade.png") no-repeat left bottom;
+    border: 1px solid black;
+    overflow: hidden;
+    position: relative;
+    height: 250px; 
+  }
+  [data-ur-infinite="enabled"] [data-ur-carousel-component="scroll_container"] {
+    margin: auto;
+    width: 250px; 
+  }
+  [data-ur-carousel-component="scroll_container"] img {
+    -webkit-user-drag: none;
+    float: left;
+    width: 250px;
+    height: 250px; 
+  }
+  [data-ur-carousel-component="button"] {
+    display: inline-block; 
+  }
+    [data-ur-carousel-component="button"][data-ur-state="disabled"] {
+      opacity: 0.3; 
+    }
+  [data-ur-carousel-component="dots"] {
+    float: right; 
+  }
+  [data-ur-carousel-component="dot"] {
+    -moz-border-radius: 7px;
+    -webkit-border-radius: 7px;
+    -o-border-radius: 7px;
+    -ms-border-radius: 7px;
+    -khtml-border-radius: 7px;
+    border-radius: 7px;
+    background: black;
+    display: inline-block;
+    margin: 0 5px;
+    opacity: 0.8;
+    width: 10px;
+    height: 10px; 
+  }
+    [data-ur-carousel-component="dot"][data-ur-state="inactive"] {
+      opacity: 0.3; }
