Changing header and index

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,9 @@
 <a id="github_ribbon" href="https://github.com/moovweb/uranium" target="_blank">Fork me<span class="desktop"> on GitHub</span></a>
 <nav id="menu">
   {% capture tmp %}
+  <a href="/" id="uraniumlogo" {% if page.home_selected %}class="selected"{% endif %}></a>
   <a href="/" {% if page.home_selected %}class="selected"{% endif %}>Main</a>
-  <a href="/tutorials.html" {% if page.tutorials_selected %}class="selected"{% endif %}>Tutorial</a>
   <a href="/widget_list.html" {% if page.widget_selected %}class="selected"{% endif %}>Widgets</a>
-  <a href="/more.html" {% if page.more_selected %}class="selected"{% endif %}>Philosophy</a>
-  <a href="/download.html" {% if page.download_selected %}class="selected"{% endif %}>Download</a>
   {% endcapture %}
   {{ tmp | strip_newlines | remove: "  " }}
 </nav>
