--- a/stylesheets/scss/_index.scss
+++ b/stylesheets/scss/_index.scss
@@ -19,17 +19,16 @@
     @include background(linear-gradient(#fafafa, darken(#fafafa, 10%)));
     @include box-shadow(rgba(#333, 0.8) 0 0 20px 2px);
     display: inline-block;
-    padding: 30px 7%;
+    padding: 16px 5%;
     color: #323232;
     font: 24px "Ultra", sans-serif;
-    text-align: center;
     text-shadow: #c7c7c7 0px 1px 0px;
     vertical-align: middle;
-    width: 240px;
     small {
       display: block;
       font-family: "Yellowtail", serif;
       margin-top: 20px;
+      text-align: right;
     }
     @media screen and (max-width: 768px) {
       font-size: 18px;
